'X-CSRF-TOKEN' added to ajax POST header enables usage of csrf  - added 'X-CSRF-TOKEN' : $("meta[name='_csrf']").attr("content") to ajax POST request in app.js  - added csrf meta information to home.jsp page <head>  - changed home.jsp page layout of <div id="main-panel"> + additional css styling  - enable csrf in SecurityConfig

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -80,6 +80,10 @@ a {
     margin-left: 15px;
     margin-right: 15px;
 }
+#form {
+    margin-left: 15px;
+    margin-right: 15px;
+}
 .chirp{
     border-radius: 5px;
     padding: 0 5px 0 5px;
